GNOME Bugzilla – Bug 733324
skipping a frame in decode_picture() shouldn't stop the gst pipeline
Last modified: 2014-07-21 08:18:50 UTC
Hi! The frame skip could be handled gracefully by making decode_picture() return GST_VAAPI_DECODER_STATUS_DROP_FRAME instead of GST_VAAPI_DECODER_STATUS_ERROR_NO_DATA. Without this patch, the pipeline stops with this error: ERROR: from element /GstPipeline:pipeline0/GstMatroskaDemux:matroskademux0: GStreamer encountered a general stream error.
Created attachment 281015 [details] [review] decoder: mpeg4: fix picture decoder return value
Review of attachment 281015 [details] [review]: Applied to git master branch. Thanks.
commit 00ca734ebf4ea554588ff067f364ad4d3e383e42 Author: Fabrice Bellet <fabrice@bellet.info> Date: Thu Jul 17 01:51:36 2014 +0200 decoder: mpeg4: fix picture decoder return value for skipped frames. The picture decoder should return GST_VAAPI_DECODER_STATUS_DROP_FRAME when a frame should be skipped, so the stream processing is not stalled. https://bugzilla.gnome.org/show_bug.cgi?id=733324